# python_adt

./: .gitignore  README.md  adt.py  examples.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: basic-test.yml  basic-tests.yml  codecov.yml
adt/: __init__.py
docs/: api.rst  conf.py  index.rst
examples/: basic.py
