[metadata]
name = adt
version = attr: adt.__version__
author = Lewis Gaul
author_email = lewis.gaul@gmail.com
description = Algebraic Data Types in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LewisGaul/python_adt
project_urls =
  Issues = https://github.com/LewisGaul/python_adt/issues
license = MIT License
classifiers =
  Programming Language :: Python :: 3
  Development Status :: 2 - Pre-Alpha
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.6
install_requires =
